--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         /* Cinematic Title */
         .cinematic-title {
             text-align: center;
-            font-size: 48px;
+            font-size: 36px;
             margin: 30px auto;
             letter-spacing: 3px;
             color: #f8e7d1;
@@ -282,7 +282,7 @@
     </div>
 
     <!-- Message Sections -->
-    <div class="scroll-section">
+<!--     <div class="scroll-section">
         <h2>🎈 A Beautiful Journey Together</h2>
         <p>Every picture tells a story. From smiles to laughter, these moments remind us of the joy we shared throughout the year.</p>
     </div>
@@ -290,7 +290,7 @@
     <div class="scroll-section">
         <h2>✨ Cherished Memories</h2>
         <p>From small victories to big celebrations, life has been brighter because of you, Dad. Here's to many more happy years!</p>
-    </div>
+    </div> -->
 
     <!-- Play Button -->
     <div class="btn-container">
